# VoxCaps

./: .gitignore  CLAUDE.md  CONTEXT.md  NOTICE.md  build-client.spec  build.spec  config_client.py  config_server.py  hot.txt  pyproject.toml  readme.md  requirements-server.txt  start_client.py  start_server.py  zip_release.py
.ai-workflow/: state.json
.github/workflows/: windows-packages.yml
assets/: BUILD_GUIDE.md
core/client/: __init__.py  app.py  state.py
core/server/: __init__.py  app.py  state.py
core/ui/: __init__.py  context_dialog.py  (+7 more)
docs/: text_merge_algorithm.md  动态状态岛与UV双包构建.md  常见问题.md  显卡加速的若干问题.md  模型下载的若干问题.md  热词功能如何使用.md  环境依赖安装说明.md  角色功能如何使用.md  诊断版Server测试说明.md
models/: FireRed.ipynb  Fun-ASR-Nano.ipynb  Paraformer.ipynb  Punct.ipynb  SenseVoice.ipynb
scripts/: build-windows-packages.ps1  generate-brand-icon.py  llama_runtime_manifest.py  prepare-llama-runtime.py  publish-github-release.ps1  verify-brand-assets.py  verify-windows-packages.py
tests/: test_audio_recorder_delivery.py  test_brand_icon_assets.py  test_brand_residue.py  test_daemon_serial_executor.py  test_gguf_runtime_packaging.py  test_island_controller.py  test_island_state_machine.py  test_island_view_geometry.py  test_keyboard_shortcut_config.py  test_mic_runner_resources.py  test_model_loader_optional_sherpa.py  test_ordered_delivery_queue.py  test_release_metadata.py  test_result_processor_ordering.py  test_shortcut_event_handler.py  test_shortcut_task_resources.py  test_voice_input_session.py  test_websocket_server_logging.py  test_worker_crash_diagnostics.py
(+61 files in other folders)
